# parver

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: create-release.yml  main.yml  pre-commit.yml  python-publish.yml
.travis/: upload_coverage.sh
docs/: api.rst  conf.py  index.rst  installation.rst  parverdoc.py  requirements.txt  usage.rst
src/parver/: __init__.py  _about.py  _helpers.py  _parse.py  _release_int.py  _segments.py  _typing.py  _version.py
tests/: __init__.py  conftest.py  strategies.py  test_helpers.py  test_packaging.py  test_parse.py  test_release_int.py  test_version.py
