[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parver"
version = "0.5"
description = "Parse and manipulate version numbers."
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
keywords = ["pep440", "version", "parse"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "arpeggio>=1.7",
    "attrs >= 19.2",
    "typing-extensions; python_version<'3.10'",
]

[project.optional-dependencies]
test = ["pytest", "hypothesis", "pretend"]
docs = ["sphinx", "furo"]
docstest = ["doc8"]
pep8test = ["flake8", "pep8-naming"]

[project.urls]
Documentation = "https://parver.readthedocs.io"
"Source Code" = "https://github.com/RazerM/parver"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["parver", "tests/"]

[tool.coverage.paths]
source = ["src/parver", ".tox/*/lib/python*/site-packages/parver"]

[tool.coverage.report]
precision = 1
exclude_lines = ["pragma: no cover", "pass"]

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "arpeggio.*",
]
ignore_missing_imports = true
