[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parver"
version = "0.5"
description = "Parse and manipulate version numbers."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
keywords = ["pep440", "version", "parse"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "typing-extensions>=4.14.0; python_full_version<'3.11'",
]

[dependency-groups]
dev = [
    { include-group = "coverage" },
    { include-group = "nox" },
    { include-group = "test" },
    { include-group = "typing" },
    "ruff==0.15.13",
]
docs = [
    "furo>=2025.12.19",
    "sphinx>=8.1.3",
]
docstest = [
    { include-group = "docs" },
    "doc8>=2.0.0",
]
coverage = [
    "coverage[toml]>=7.14.0",
]
nox = [
    "nox>=2026.4.10",
]
test = [
    "hypothesis>=6.152.7",
    "pretend>=1.0.9",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]
typing = [
    "mypy>=2.1.0",
]

[project.urls]
Documentation = "https://parver.readthedocs.io"
"Source Code" = "https://github.com/RazerM/parver"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["parver", "tests/"]
parallel = true
patch = ["subprocess"]
disable_warnings = ["module-not-imported"]

[tool.coverage.paths]
source = ["src/parver", ".nox/**/site-packages/parver"]

[tool.coverage.report]
precision = 1
exclude_also = [
    '^\s*pass$',
    '^\s*raise NotImplementedError\b',
    '^\s*return NotImplemented\b',
    '^\s*raise$',
    '^\s*(case _:\n\s*)?(typing\.)?assert_never\(',
]

[tool.mypy]
warn_unused_configs = true
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

[tool.pytest]
testpaths = ["tests"]
addopts = ["-r", "s", "--numprocesses=auto", "--dist=worksteal", "--maxprocesses=6"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", # ruff defaults
    "I", # isort
    "UP", # pyupgrade
    "RUF", # ruff
]

[tool.doc8]
ignore-path = ["docs/_build", "docs/requirements.txt"]
